@@ -1,3 +1,8 @@
+2012-03-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* theme.py: Added support for user theme directory.
+	  (~/.config/gfeedline/theme/)
+
 2012-03-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* NEWS: 1.1 beta 1 release.
